# pupaos

./: .gitignore  build-iso.sh  build.sh  installer.sh  startos.sh  test.sh
.claude/: settings.local.json
.cursor/rules/: senior-dev-standards.mdc
overlay/.config/: wayfire.ini
overlay/.config/quickshell/bottom/: shell.qml
overlay/.config/quickshell/launcher/: shell.qml  toggle.sh
overlay/.config/xdg-desktop-portal/: portals.conf
overrides/data/: issue
overrides/dracut/vmklive/: adduser.sh
tools/quickshell-wayfire/: Cargo.toml
tools/quickshell-wayfire/src/: lib.rs
